--- a/www/elements/c2m-admin-app/c2m-admin-app.css
+++ b/www/elements/c2m-admin-app/c2m-admin-app.css
@@ -3,6 +3,34 @@
   display: block;
 }
 
+paper-menu iron-icon {
+  margin-right: 33px;
+  opacity: 0.54;
+}
+
+paper-menu a {
+  text-decoration: none;
+  color: var(--menu-link-color);
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  font-family: 'Roboto', 'Noto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  min-height: 48px;
+  padding: 0 16px;
+}
+
+/*
 .nav {
   border-right: 1px solid #ccc;
   background-color: #5EB08F;
@@ -39,4 +67,4 @@ paper-toolbar {
 .content {
   background-color: #5EB08F;
   height: 3000px;
-}
+}*/
